# mineradorDeVagasGLN

./: README.md  aurelius_bot.py  aurelius_canal.py  bot.py  bot_functions.py  document.txt  file_handler_functions.py  files.py  funcoes.py  guilhermeV.py  lissaV.py  main.py  person.txt  pyproject.toml  requirements.txt  scraping.py  vagas.json
bot/: bot.py  bot_privado.py
files/: lista_de_tags.txt  vagas.json
