[tool.poetry]
name = "runner"
version = "0.1.0"
description = ""
authors = ["Guilherme Ferreira <guilherme.schiffer@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
telepot = "^12.7"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
